[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/spr_npc_manny.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/obsolete/g_npc_mannequin.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 3 )

[sub_resource type="OccluderPolygon2D" id=3]
polygon = PoolVector2Array( -5, -6, 5, -6, 5, 0, -5, 0 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 7.5 )

[node name="Mannequin" type="RigidBody2D"]
mode = 3
script = ExtResource( 2 )
movspeed = 0.5

[node name="Sprite" type="Sprite" parent="."]
light_mask = 4
position = Vector2( 0, -15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3 )
shape = SubResource( 1 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 3 )

[node name="InteractionArea" type="Area2D" parent="."]
position = Vector2( 0, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( 0, 11 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 0, 4 )
enabled = true
cast_to = Vector2( 0, 140 )
collide_with_areas = true

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
